--- a/LibraryManager/App.config
+++ b/LibraryManager/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LibraryManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
     </startup>
+    <userSettings>
+        <LibraryManager.Properties.Settings>
+            <setting name="libraryName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="libraryLocation" serializeAs="String">
+                <value />
+            </setting>
+        </LibraryManager.Properties.Settings>
+    </userSettings>
 </configuration>
