Cleaned up code

--- a/LibraryManager/Properties/Settings.settings
+++ b/LibraryManager/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="libraryLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="theme" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Dark</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
